modules/cli/src/test/resources/good/efsm/gdo/Test08a.scr
module good.efsm.gdo.Test08a;


global protocol Foo(role A, role B)
{
	1() from A to B;
	choice at A
	{
		2() from A to B;
		do Bar(A, B);
	}
	or
	{
		1() from A to B;
		2() from A to B;
	}
}


aux global protocol Bar(role A, role B)
{
	//3() from A to B;
	do Foo(A, B);
}
